minor-changes-fix

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=4000
 DEFAULT_PORT=5000
 MONGO_URI=mongodb+srv://root:admin@smartparkingsystem-clus.vj6rb55.mongodb.net/?retryWrites=true&w=majority
+TOKEN_KEY= eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
